2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_freebsd_load_elfmodule): Fix
	current address calculation.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (decode_block): Allocate on heap and not
	stack.
	(encode_block): Likewise.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S: Clear direction flag for
	certainety.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S: Move realmode routines to
	non-RS part to avoid RS messing with GDT.
	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART):
	Increase to suit in realmode routines.

2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/realmode.S: Increase alignment.
	* grub-core/boot/i386/pc/startup_raw.S: Likewise.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (init_powx): Set gf_powx_inv[0] just to
	be deterministic.
	(syndroms): Compute 0 syndrom.
	(rs_recover): Use 0 syndrom.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (FOR_MODULES): Make it a bit faster.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (GRUB_PROPERLY_ALIGNED_ARRAY): Add missing
	brackets.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/widget-box.c (get_left_pad): Take corners into
	account.
	(get_top_pad): Likewise.
	(get_right_pad): Likewise.
	(get_bottom_pad): Likewise.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_list.c (draw_menu): Don't use assignment in if.

2011-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (grub_efi_memory_descriptor): Add packed
	attribute as the structure isn't guaranteed to be properly aligned.
	(grub_efi_pci_device_path): Likewise.
	(grub_efi_pccard_device_path): Likewise.